Fixing text-align Home

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -89,16 +89,13 @@ h1 {
 
 .encrypt-wrapper {
 	display: flex;
-	/*flex-direction: column;
-	align-items: center;*/
 	height: 100vh;
 
 }
 
 .encrypt-wrapper-title {
 	font-size: calc(1em + .5vw);
-	margin-bottom: 2em;
-	text-align: center;
+	text-align: left;
 	font-weight: normal;
 }
 
